--- a/haxball_site/templates/tournament/teams/team_page.html
+++ b/haxball_site/templates/tournament/teams/team_page.html
@@ -92,15 +92,23 @@
                                 <th scope="col" class="text-center"><img
                                         src="{% static "img/ico/assists_icon.png" %}" height="25" width="25"
                                         title="Голевые передачи"></th>
-                                <th scope="col">Сухие</th>
-                                <th scope="col">ушёл</th>
-                                <th scope="col">вышел</th>
+                                <th scope="col" class="text-center"><img
+                                        src="{% static "img/ico/clean_sheet1.png" %}" height="25" width="25"
+                                        title="Сухие матчи"></th>
+                                <th scope="col">                                    <div class="h-75 text-center">
+                                    <i class="fa fa-arrow-down text-danger" aria-hidden="true" style="font-size: 20px"></i>
+                                        </div></th>
+                                <th scope="col">
+                                    <div class="h-75 text-center">
+                                    <i class="fa fa-arrow-up text-success" aria-hidden="true" style="font-size: 20px"></i>
+                                        </div>
+                                </th>
                                 <th scope="col">АГ</th>
-                                <th scope="col"><img
-                                        src="{% static "img/ico/yellow_card.png" %}" height="16" width="16"
+                                <th scope="col" class="text-center"><img
+                                        src="{% static "img/ico/yellow_card.png" %}" height="25" width="25"
                                         title="Жёлтые карточки"></th>
-                                <th scope="col"><img
-                                        src="{% static "img/ico/red_card.png" %}" height="16" width="16"
+                                <th scope="col" class="text-center"><img
+                                        src="{% static "img/ico/red_card.png" %}" height="25" width="25"
                                         title="Красные карточки"></th>
                             </tr>
                             </thead>
