--- a/haxball_site/templates/core/include/form_comment.html
+++ b/haxball_site/templates/core/include/form_comment.html
@@ -12,6 +12,7 @@
     </div>
 
     <div align="right">
-        <button type="submit" class="btn btn-primary mb-5 mr-4">Отправить</button>
+        <!--Отправить</input>-->
+        <input type="submit" class="btn btn-primary mb-5 mr-4">
     </div>
 </form>
