--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -29,7 +29,7 @@
                     Чемпионат
                 </a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Высшая лига</a>
+                    <a class="dropdown-item" href="{% url 'tournament:premier_league' %}">Высшая лига</a>
                     <a class="dropdown-item" href="#">Первый дивизион</a>
                     <a class="dropdown-item" href="#">Кубок России</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/86/reglament">Регламент</a>
