--- a/haxball_site/templates/tournament/premier_league/team_table.html
+++ b/haxball_site/templates/tournament/premier_league/team_table.html
@@ -14,14 +14,9 @@
 {% block profile_of_user %}
     <div class="card mb-4 mt-2" style="border-radius: 25px">
         <div class="card-header" style="border-radius: 25px">
-            <h4>
-                {% for league in teams.leagues.all %}
-                    {{ league }}
-                    {% if league.championship.is_active and league.priority == 1 %}
-                        {{ league.title }}
-                    {% endif %}
-                {% endfor %}
-            </h4>
+            <h3 class="text-center">
+                Высшая лига
+            </h3>
         </div>
         <div class="card-body text-center p-0">
             <table class="table table-dark">
@@ -44,8 +39,12 @@
                     <tr>
 
                         <th scope="row">{{ forloop.counter }}</th>
-                        <td class="text-left"><a href="{{ team.get_absolute_url }}" class="h5"><img
-                                src="{{ team.logo.url }}" alt="{{ team.title }}" width="12%">{{ team.title }}</a></td>
+
+                        <td class="text-left">
+
+                            <a href="{{ team.get_absolute_url }}" class="h5"><img
+                                src="{{ team.logo.url }}" alt="{{ team.title }}" width="12%" class="mr-1">{{ team.title }}</a>
+                        </td>
                         <td>{{ team|matches_in_league }}</td>
                         <td>{{ team|res_in_league:'w' }}</td>
                         <td>{{ team|res_in_league:'d' }}</td>
