--- a/haxball_site/templates/tournament/premier_league/team_table.html
+++ b/haxball_site/templates/tournament/premier_league/team_table.html
@@ -13,51 +13,174 @@
 {% block title %}Чемпионат | Команды          cis-haxball.com {% endblock %}
 {% block profile_of_user %}
     <div class="card mb-4 mt-2" style="border-radius: 25px">
-        <div class="card-header" style="border-radius: 25px">
+        <div class="card-header pb-0" style="border-radius: 25px 25px 0 0">
             <h3 class="text-center">
-                Высшая лига
+                {{ league.title }}
             </h3>
+            <div class="row">
+                <ul class="nav nav-pills nav-fill" id="myTab" style="width: 100%;">
+                    <li class="nav-item">
+                        <a class="nav-link h5 active" id="table-tab" data-toggle="tab" href="#table" role="tab"
+                           aria-controls="league-table-tab" aria-selected="true">Таблица</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link h5" id="detail-tab" data-toggle="tab" href="#detail_stat" role="tab"
+                           aria-controls="detail_stat-tab" aria-selected="false">Статистика</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link h5" data-toggle="tab" href="#matches" role="tab"
+                           aria-controls="matches-tab" aria-selected="false">Матчи</a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="card-body text-center p-0">
-            <table class="table table-dark">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Команда</th>
-                    <th scope="col">&nbspИ&nbsp</th>
-                    <th scope="col">&nbspВ&nbsp</th>
-                    <th scope="col">&nbsp;Н&nbsp;</th>
-                    <th scope="col">&nbsp;П&nbsp;</th>
-                    <th scope="col">ЗМ</th>
-                    <th scope="col">ПМ</th>
-                    <th scope="col">+/-</th>
-                    <th scope="col">&nbsp;O&nbsp;</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for team in teams %}
-                    <tr>
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="table" role="tabpanel"
+                     aria-labelledby="league-table-tab">
+                    <table class="table table-dark">
+                        <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Команда</th>
+                            <th scope="col">&nbspИ&nbsp</th>
+                            <th scope="col">&nbspВ&nbsp</th>
+                            <th scope="col">&nbsp;Н&nbsp;</th>
+                            <th scope="col">&nbsp;П&nbsp;</th>
+                            <th scope="col">ЗМ</th>
+                            <th scope="col">ПМ</th>
+                            <th scope="col">+/-</th>
+                            <th scope="col">&nbsp;O&nbsp;</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for team in league|sort_teams %}
+                            <tr>
 
-                        <th scope="row">{{ forloop.counter }}</th>
+                                <th scope="row">{{ forloop.counter }}</th>
 
-                        <td class="text-left">
+                                <td class="text-left">
 
-                            <a href="{{ team.get_absolute_url }}" class="h5"><img
-                                src="{{ team.logo.url }}" alt="{{ team.title }}" width="12%" class="mr-1">{{ team.title }}</a>
-                        </td>
-                        <td>{{ team|matches_in_league }}</td>
-                        <td>{{ team|res_in_league:'w' }}</td>
-                        <td>{{ team|res_in_league:'d' }}</td>
-                        <td>{{ team|res_in_league:'l' }}</td>
-                        <td>{{ team|res_in_league:'s' }}</td>
-                        <td>{{ team|res_in_league:'c' }}</td>
-                        <td>{{ team|res_in_league:'dif' }}</td>
-                        <td>{{ team|res_in_league:'p' }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+                                    <a href="{{ team.get_absolute_url }}" class="h5"><img
+                                            src="{{ team.logo.url }}" alt="{{ team.title }}" width="12%"
+                                            class="mr-1">{{ team.title }}</a>
+                                </td>
+                                <td>{{ team|matches_in_league }}</td>
+                                <td>{{ team|res_in_league:'w' }}</td>
+                                <td>{{ team|res_in_league:'d' }}</td>
+                                <td>{{ team|res_in_league:'l' }}</td>
+                                <td>{{ team|res_in_league:'s' }}</td>
+                                <td>{{ team|res_in_league:'c' }}</td>
+                                <td>{{ team|res_in_league:'dif' }}</td>
+                                <td>{{ team|res_in_league:'p' }}</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                <div class="tab-pane fade" id="detail_stat" role="tabpanel"
+                     aria-labelledby="detail_stat-tab">
+                    <div class="row mt-3">
+
+                        <div class="col-4">
+                            <div class="card ml-3" style="border-radius: 25px;">
+                                <div class="card-header"
+                                     style="background: linear-gradient(to right, rgba(193, 243, 229, 0.7), rgba(91, 142, 241, 0.32)); border-radius: 25px 25px 0 0;">
+
+
+                                    <h5 class="mb-0">Бомбардиры <img src="{% static "img/ico/ball_2.png" %}" height="14"
+                                                                     width="14"
+                                                                     title="Забито"></h5>
+                                </div>
+                                <div class="card-body p-0" style="">
+
+                                    <table class="table table-hover mb-0" style="border-radius: 25px">
+                                        <tbody style="border-radius: 25px;">
+                                        {% for pl in league|top_goalscorers %}
+                                            <tr style="border-radius: 25px;">
+
+                                                <td {% if forloop.last %}
+                                                    style="border-radius: 0 0 0 25px;" {% endif %}>{{ pl.nickname }}</td>
+                                                <td {% if forloop.last %}
+                                                    style="border-radius: 0 0 25px 0;" {% endif %}>{{ pl.goals_c }}
+                                                </td>
+
+                                            </tr>
+                                        {% endfor %}
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-4">
+                            <div class="card" style="border-radius: 25px;">
+                                <div class="card-header"
+                                     style="background: linear-gradient(to right, rgba(193, 243, 229, 0.7), rgba(91, 142, 241, 0.32)); border-radius: 25px 25px 0 0;">
+
+
+                                    <h5 class="mb-0">Ассистенты</h5>
+                                </div>
+                                <div class="card-body p-0" style="">
+                                    <table class="table table-hover mb-0">
+                                        <tbody>
+                                        {% for pl in league|top_assistent %}
+                                            <tr style="border-radius: 25px;">
+
+                                                <td {% if forloop.last %}
+                                                    style="border-radius: 0 0 0 25px;" {% endif %}>{{ pl.nickname }}</td>
+                                                <td {% if forloop.last %}
+                                                    style="border-radius: 0 0 25px 0;" {% endif %}>{{ pl.ass_c }}
+                                                </td>
+
+                                            </tr>
+                                        {% endfor %}
+
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="col-4">
+                            <div class="card mr-3" style="border-radius: 25px;">
+                                <div class="card-header"
+                                     style="background: linear-gradient(to right, rgba(193, 243, 229, 0.7), rgba(91, 142, 241, 0.32)); border-radius: 25px 25px 0 0;">
+
+
+                                    <h5 class="mb-0">Сухие матчи</h5>
+                                </div>
+                                <div class="card-body p-0" style="">
+                                    <table class="table table-hover mb-0">
+                                        <tbody>
+                                        {% for pl in league|top_clean_sheets %}
+                                            <tr style="border-radius: 25px;">
+
+                                                <td {% if forloop.last %}
+                                                    style="border-radius: 0 0 0 25px;" {% endif %}>{{ pl.nickname }}</td>
+                                                <td {% if forloop.last %}
+                                                    style="border-radius: 0 0 25px 0;" {% endif %}>{{ pl.event_c }}
+                                                </td>
+
+                                            </tr>
+                                        {% endfor %}
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="matches" role="tabpanel"
+                     aria-labelledby="matches-tab">
+                    <div class="row">
+                        <h4>matchi</h4>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-
 {% endblock %}
