--- a/haxball_site/templates/tournament/teams/team_page.html
+++ b/haxball_site/templates/tournament/teams/team_page.html
@@ -21,18 +21,25 @@
             </div>
             <div class="col-md-6">
                 <div class="profile-head">
-                    <h5>
+                    <h3>
                         {{ team.title }}
-                    </h5>
+                    </h3>
                     <h6>
                         {% for leagues in team.leagues.all %}
                             {% if leagues.priority == 1 %}
-                                <a href="{% url 'tournament:premier_league' %}">{{ leagues }}</a>
+                                <a href="{{ leagues.get_absolute_url }}">{{ leagues }}</a>
                             {% endif %}
                         {% endfor %}
                     </h6>
-                    <p class="proile-rating">RANKINGS : <span>8/10</span></p>
-                    <div class="p-2" style="position: absolute; bottom: 0;">
+                    <p class="profile-rating" style="font-weight: bold;">Позиция : <span>8/10</span></p>
+                    <p>
+                        <a href="{{ team.office_link }}" style="color: #671af1">
+                            Офис
+                            <img src="{% static "img/ico/team_office.png" %}" height="28" width="28"
+                                 title="Офис команды">
+                        </a>
+                    </p>
+                    <div class="p-0" style="position: absolute; bottom: 0;">
                         <ul class="nav nav-tabs" id="myTab" role="tablist">
                             <li class="nav-item">
                                 <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab"
@@ -44,7 +51,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="other-tab" data-toggle="tab" href="#other" role="tab"
-                                   aria-controls="profile" aria-selected="false">Другое</a>
+                                   aria-controls="profile" aria-selected="false">Контакты</a>
                             </li>
                         </ul>
                     </div>
@@ -56,7 +63,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4 ml-0">
+            <!-- <div class="col-md-4 ml-0">
                 <div class="profile-work">
                     <p>Владелец</p>
                     <div class="media">
@@ -68,9 +75,11 @@
                             </h6>
                         </div>
                     </div>
+                    <p>Офис </p>
                     <a href="{{ team.office_link }}"><img
                             src="{% static "img/ico/team_office.png" %}" height="28" width="28" title="Офис команды">
-                        Офис </a><br/>
+                        </a>
+                    <br/>
                     <a href="">Bootsnipp Profile</a><br/>
                     <a href="">Bootply Profile</a>
                     <p>SKILLS</p>
@@ -80,11 +89,11 @@
                     <a href="">WooCommerce</a><br/>
                     <a href="">PHP, .Net</a><br/>
                 </div>
-            </div>
-            <div class="col-md-8 p-0">
+            </div> -->
+            <div class="col-md-12 py-4">
                 <div class="tab-content profile-tab" id="myTabContent">
-                    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                        <table class="table table-bordered table-sm">
+                    <div class="tab-pane fade show active pr-2" id="home" role="tabpanel" aria-labelledby="home-tab">
+                        <table class="table table-bordered table-hover text-center" bgcolor="#ffd756" style="color: black; font-weight: bold;">
                             <thead>
                             <tr>
                                 <th scope="col">Игрок</th>
@@ -95,25 +104,29 @@
                                         src="{% static "img/ico/ball_2.png" %}" height="20" width="20"
                                         title="Забито"></th>
                                 <th scope="col" class="text-center"><img
-                                        src="{% static "img/ico/assists_icon.png" %}" height="25" width="25"
+                                        src="{% static "img/ico/assists_icon.png" %}" height="20" width="20"
                                         title="Голевые передачи"></th>
                                 <th scope="col" class="text-center"><img
-                                        src="{% static "img/ico/clean_sheet1.png" %}" height="25" width="25"
+                                        src="{% static "img/ico/clean_sheet1.png" %}" height="20" width="20"
                                         title="Сухие матчи"></th>
-                                <th scope="col">                                    <div class="h-75 text-center">
-                                    <i class="fa fa-arrow-down text-danger" aria-hidden="true" style="font-size: 20px"></i>
-                                        </div></th>
                                 <th scope="col">
                                     <div class="h-75 text-center">
-                                    <i class="fa fa-arrow-up text-success" aria-hidden="true" style="font-size: 20px"></i>
-                                        </div>
+                                        <i class="fa fa-arrow-down text-danger" aria-hidden="true"
+                                           style="font-size: 21px"></i>
+                                    </div>
+                                </th>
+                                <th scope="col">
+                                    <div class="h-75 text-center">
+                                        <i class="fa fa-arrow-up text-success" aria-hidden="true"
+                                           style="font-size: 21px"></i>
+                                    </div>
                                 </th>
                                 <th scope="col">АГ</th>
                                 <th scope="col" class="text-center"><img
-                                        src="{% static "img/ico/yellow_card.png" %}" height="25" width="25"
+                                        src="{% static "img/ico/yellow_card.png" %}" height="20" width="20"
                                         title="Жёлтые карточки"></th>
                                 <th scope="col" class="text-center"><img
-                                        src="{% static "img/ico/red_card.png" %}" height="25" width="25"
+                                        src="{% static "img/ico/red_card.png" %}" height="20" width="20"
                                         title="Красные карточки"></th>
                             </tr>
                             </thead>
