--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -3,11 +3,12 @@
 <nav class="navbar navbar-light navbar_color nav-fill"
                                      style="background-image:url({% static "img/backgrounds/back_niqo3.png" %}); height: 100px; background-position: center; ">
 
+    <!--
     <form class="form-inline">
         <input class="form-control mr-sm-2" type="search" placeholder="Поиск" aria-label="Search">
         <button class="btn btn-success my-2 my-sm-0" type="submit">Поиск</button>
     </form>
-
+-->
     <div class="mr-100">
         <!-- <iframe src="https://money.yandex.ru/quickpay/button-widget?targets=%D0%9F%D0%BE%D0%B6%D0%B5%D1%80%D1%82%D0%B2%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5&default-sum=200&button-text=14&yamoney-payment-type=on&button-size=m&button-color=black&successURL=&quickpay=small&account=410011043451485&"
                 width="250" height="36" frameborder="0" allowtransparency="true" scrolling="no"></iframe> -->
@@ -35,7 +36,7 @@
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/86/reglament">Регламент</a>
                     <a class="dropdown-item" href="#">Бронь хоста</a>
                     <a class="dropdown-item" href="#">Переносы</a>
-                    <a class="dropdown-item" href="#">Трансферы</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/104/transfers">Трансферы</a>
                     <a class="dropdown-item" href="{% url 'tournament:free_agent' %}">Свободные агенты</a>
                 </div>
             </li>
