--- a/haxball_site/templates/tournament/premier_league/team_table.html
+++ b/haxball_site/templates/tournament/premier_league/team_table.html
@@ -149,7 +149,7 @@
                                      style="background: linear-gradient(to right, rgba(193, 243, 229, 0.7), rgba(91, 142, 241, 0.32)); border-radius: 25px 25px 0 0;">
 
 
-                                    <h5 class="mb-0">Сухие матчи</h5>
+                                    <h5 class="mb-0">Сухие таймы</h5>
                                 </div>
                                 <div class="card-body p-0" style="">
                                     <table class="table table-hover mb-0">
@@ -177,7 +177,13 @@
                 <div class="tab-pane fade" id="matches" role="tabpanel"
                      aria-labelledby="matches-tab">
                     <div class="row">
-                        <h4>matchi</h4>
+                        <div class="col-12">
+                            {% for match in league.matches_in_league.all %}
+                                <h6>Тур {{ match.tour_num }}</h6>
+                                <a class="h6" href="{{ match.get_absolute_url }}">{{ match.team_home.title }}
+                                    - {{ match.team_guest.title }}</a>
+                            {% endfor %}
+                        </div>
                     </div>
                 </div>
             </div>
